--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<h3>Cryptos</h3>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>A very minimalist and simple website for checking real-time cryptocurrency price.</p>
-						<a class="my-button" target="_blank" href="file:///home/cristi/Desktop/Projects/Personal_Projects/ProFotoVideo/index.html">Visit Website</a>
+						<a class="my-button" target="_blank" href="https://cristicismas.github.io/Cryptos">Visit Website</a>
 					</div>
 				</div>
 			</div>
