--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<h3>DreamTrips</h3>
                         <p><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>A fictional travel agency website that brings people together and makes them enjoy every second of their trips.</p>
-						<a class="my-button" target="_blank" href="file:///home/cristi/Desktop/Projects/Personal_Projects/DreamTrips/index.html">Visit Website</a>
+						<a class="my-button" target="_blank" href="https://cristicismas.github.io/DreamTrips">Visit Website</a>
 					</div>
 				</div>
 			</div>
@@ -136,7 +136,7 @@
 						<h3>CrustySlice</h3>
                         <p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>A fictional pizzeria website that manages to bring the best pizza in everybody's house with just the effort of a few clicks.</p>
-						<a class="my-button" target="_blank" href="file:///home/cristi/Desktop/Projects/Personal_Projects/CrustySlice/index.html">Visit Website</a>
+						<a class="my-button" target="_blank" href="https://cristicismas.github.io/CrustySlice">Visit Website</a>
 					</div>
 				</div>
 			</div>
