Small updates for better responsiveness

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1, maximum-scale=1">
-    <meta name="description" content="Hi! My name is Cristi and I am a young freelance web and software developer. I develop professional websites and applications.">
+    <meta name="description" content="Hi! My name is Cristi and I am a young freelance front-end web developer.">
     
-	<title>Cristi Cismas | Web And Software Developer</title>
+	<title>Cristi Cismas | Web Developer</title>
     
     <!-- Bower Scripts and Styles -->
 	<script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
@@ -99,7 +99,6 @@
 						<li>Python</li>
 						<li>Javascript</li>
 						<li>Kotlin</li>
-						<li>SQL</li>
 					</ul>
 				</div>
 			</div>
@@ -121,7 +120,7 @@
 					<div class="details details-ftm">
 						<h3>DreamTrips</h3>
                         <p><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A fictional travel agency website that brings people together and makes them enjoy every second of their trips.</p>
+						<p>A <b>fictional</b> travel agency website that brings people together and makes them enjoy every second of their trips.</p>
 						<a class="my-button" target="_blank" href="https://cristicismas.github.io/DreamTrips">Visit Website</a>
 					</div>
 				</div>
@@ -135,7 +134,7 @@
 					<div class="details details-ftm">
 						<h3>CrustySlice</h3>
                         <p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A fictional pizzeria website that manages to bring the best pizza in everybody's house with just the effort of a few clicks.</p>
+						<p>A <b>fictional</b> pizzeria website that manages to bring the best pizza in everybody's house with just the effort of a few clicks.</p>
 						<a class="my-button" target="_blank" href="https://cristicismas.github.io/CrustySlice">Visit Website</a>
 					</div>
 				</div>
@@ -149,7 +148,7 @@
 					<div class="details details-ftm">
 						<h3>Cryptos</h3>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A very minimalist and simple website for checking real-time cryptocurrency price.</p>
+						<p>A very minimalistic and simple website for checking real-time cryptocurrency price.</p>
 						<a class="my-button" target="_blank" href="https://cristicismas.github.io/Cryptos">Visit Website</a>
 					</div>
 				</div>
