--- a/index.html
+++ b/index.html
@@ -156,8 +156,21 @@
 					</div>
 				</div>
 			</div>
-
-
+			
+			<div class="row work-row"> <!-- even -->
+				<div class="small-12 medium-6 columns">
+					<img src="assets/images/RecipeApp.png" alt="">
+				</div>
+				<div class="small-12 medium-5 medium-offset-1 columns">
+					<div class="details details-ftm">
+						<h3>RecipeApp</h3>
+                        <p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
+						<p>A simple web app build with React.js for keeping better track of your recipes.</p>
+						<a class="my-button" target="_blank" href="https://cristicismas.github.io/RecipeApp">Visit Website</a>
+					</div>
+				</div>
+			</div>
+			
 		</section>
 
 		<section id="footer-cta">
