--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/DreamTrips.png" alt="">
+					<img src="assets/images/isometric-dreamtrips.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
@@ -131,7 +131,7 @@
 
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/CrustySlice.png" alt="">
+					<img src="assets/images/isometric-crusyslice.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
@@ -145,7 +145,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/Cryptos.png" alt="">
+					<img src="assets/images/isometric-cryptos.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
@@ -159,13 +159,13 @@
 			
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/RecipeApp.png" alt="">
+					<img src="assets/images/isometric-recipeapp.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
 						<h3>RecipeApp</h3>
                         <p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A simple web app build with React.js for keeping better track of your recipes.</p>
+						<p>A simple web app built with React.js for keeping better track of your recipes.</p>
 						<a class="my-button" target="_blank" href="https://cristicismas.github.io/RecipeApp">Visit Website</a>
 					</div>
 				</div>
