Change project images

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/isometric-dreamtrips.png" alt="">
+					<img src="assets/images/DreamTrips.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
@@ -131,7 +131,7 @@
 
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/isometric-crusyslice.png" alt="">
+					<img src="assets/images/CrustySlice.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
@@ -145,7 +145,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/isometric-cryptos.png" alt="">
+					<img src="assets/images/Cryptos.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
@@ -159,7 +159,7 @@
 			
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/isometric-recipeapp.png" alt="">
+					<img src="assets/images/RecipeApp.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
