--- a/index.html
+++ b/index.html
@@ -199,6 +199,16 @@
 
 	</div>
 	<script src="assets/scripts/app.js" charset="utf-8"></script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117569527-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-117569527-1');
+	</script>
 </body>
 
 </html>
