Change which projects to show and update their description

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="details details-ftm">
 						<h3>DreamTrips</h3>
                         <p><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A <b>fictional</b> travel agency website that brings people together and makes them enjoy every second of their trips.</p>
+						<p>A <b>fictional</b> travel agency website built purely with HTML, CSS and JavaScript.</p>
 						<a class="my-button" target="_blank" href="https://cristicismas.github.io/DreamTrips">Visit Website</a>
 					</div>
 				</div>
@@ -131,14 +131,14 @@
 
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/CrustySlice.png" alt="">
+					<img src="assets/images/RecipeApp.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
-						<h3>CrustySlice</h3>
+						<h3>RecipeApp</h3>
                         <p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A <b>fictional</b> pizzeria website that manages to bring the best pizza in everybody's house with just the effort of a few clicks.</p>
-						<a class="my-button" target="_blank" href="https://cristicismas.github.io/CrustySlice">Visit Website</a>
+						<p>A web app built with React.js for keeping better track of your recipes.</p>
+						<a class="my-button" target="_blank" href="https://cristicismas.github.io/RecipeApp">Visit Website</a>
 					</div>
 				</div>
 			</div>
@@ -151,22 +151,8 @@
 					<div class="details details-ftm">
 						<h3>Cryptos</h3>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A very minimalistic and simple website for checking real-time cryptocurrency price.</p>
+						<p>A minimalistic and simple website that uses ajax API requests to get cryptocurrency price.</p>
 						<a class="my-button" target="_blank" href="https://cristicismas.github.io/Cryptos">Visit Website</a>
-					</div>
-				</div>
-			</div>
-			
-			<div class="row work-row"> <!-- even -->
-				<div class="small-12 medium-6 columns">
-					<img src="assets/images/RecipeApp.png" alt="">
-				</div>
-				<div class="small-12 medium-5 medium-offset-1 columns">
-					<div class="details details-ftm">
-						<h3>RecipeApp</h3>
-                        <p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A simple web app built with React.js for keeping better track of your recipes.</p>
-						<a class="my-button" target="_blank" href="https://cristicismas.github.io/RecipeApp">Visit Website</a>
 					</div>
 				</div>
 			</div>
