Change experience section

--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
 					<i class="fi-laptop"></i>
 					<h3>Web</h3>
 					<ul>
-						<li>html5</li>
-						<li>css3</li>
-                        <li>Bootstrap</li>
+						<li>HTML5</li>
+						<li>CSS3</li>
+						<li>SCSS</li>
 						<li>Javascript</li>
 						<li>Jquery</li>
 						<li>ReactJS</li>
+						<li>Redux</li>
 					</ul>
 				</div>
 				<div class="small-12 medium-4 columns text-center experience-topics">
@@ -89,7 +90,7 @@
 						<li>Brackets</li>
 						<li>Visual Studio</li>
 						<li>Visual Studio Code</li>
-						<li>Android Studio</li>
+						<li>Bitbucket</li>
 						<li>Github</li>
 					</ul>
 				</div>
@@ -102,6 +103,7 @@
 						<li>Python</li>
 						<li>Javascript</li>
 						<li>Kotlin</li>
+						<li>MongoDB</li>
 					</ul>
 				</div>
 			</div>
@@ -117,7 +119,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/DreamTrips.png" alt="">
+					<img src="assets/images/DreamTrips-small.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
@@ -131,7 +133,7 @@
 
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/RecipeApp.png" alt="">
+					<img src="assets/images/RecipeApp-small.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
@@ -145,7 +147,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/Cryptos.png" alt="">
+					<img src="assets/images/Cryptos-small.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
